--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -7,6 +7,13 @@
             <li class="nav-item">
                 <a class="nav-link active" routerLink="productos">Productos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link active" routerLink="login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" routerLink="registro">Registro</a>
+            </li>
         </ul>
+        <button (click)="cerrar()">Cerrar</button>
     </div>
 </nav>
