--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,19 +1,36 @@
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <div class="container-fluid">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" routerLink="home">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" routerLink="productos">Productos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" routerLink="login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" routerLink="registro">Registro</a>
-            </li>
-        </ul>
-        <button (click)="cerrar()">Cerrar</button>
+<header>
+    <div class="container">
+        <h1>Restaurante Chifa shenyang </h1>
+        <nav>
+            <ul>
+                <li class="nav-item">
+                    <a routerLink="home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="productos">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="lista-menu">Lista Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a  routerLink="usuarios">Lista Usuarios</a>
+                </li>
+                <li class="nav-item">
+                    <a  routerLink="lista-ordenes">Lista de Ordenes</a>
+                </li>
+                <li class="nav-item">
+                    <a  routerLink="agregar-orden">Agregar Orden</a>
+                </li>
+                <li class="nav-item">
+                    <a  routerLink="registro" style="margin-left: 15px;">Registro</a>
+                </li>
+                <li class="nav-item">
+                    <a  routerLink="login" style="margin-left: 15px;">Iniciar Sesión</a>
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-danger" (click)="cerrar()">Cerrar Sesión</button>
+                </li>
+            </ul>
+        </nav>
     </div>
-</nav>
+</header>
