--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,40 @@
-<p>home works!</p>
+<section class="hero">
+    <div class="container">
+        <h2>Bienvenido a nuestro restaurante</h2>
+        <p>Bienvenidos a Chifa Shenyang, donde la rica tradición culinaria de China se fusiona con sabores únicos para ofrecer una experiencia gastronómica inigualable. Ubicado en el corazón de la ciudad, Chifa Shenyang es el lugar perfecto para degustar platos auténticos que reflejan la diversidad y riqueza de la cocina china.</p>
+        <a href="#" class="btn">Ver Menú</a>
+    </div>
+</section>
+
+<section class="about">
+    <div class="container">
+        <h2>Sobre nosotros</h2>
+        <p>Somos un restaurante dedicado a ofrecer platos de alta calidad preparados con ingredientes frescos y locales.</p>
+    </div>
+</section>
+
+<div class="container">
+    <div class="contact-form">
+        <h2>Contacto</h2>
+        <form id="contact-form" method="post" action="#">
+            <div class="input-row">
+                <label for="name">Nombre</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="input-row">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="input-row">
+                <label for="message">Mensaje</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+            </div>
+            <button type="submit">Enviar Mensaje</button>
+        </form>
+    </div>
+    <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63836.51380835322!2d-78.59037937832034!3d-0.24409539999999819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d5996b49ce3981%3A0xd97300762b90188c!2sChifa%20shenyang%20%7C%20Comida%2024%20Horas!5e0!3m2!1ses!2sec!4v1719321634498!5m2!1ses!2sec" 
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+</div>
