--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -2,6 +2,15 @@
     <form (ngSubmit)="guardar(formulario)" #formulario="ngForm" class="custom-form">
         <label class="form-label">ID</label>
         <input type="text" name="id" [(ngModel)]="id" class="form-control">
+        
+<label class="form-label">Nombre</label>
+        <input type="nombre" name="nombre" [(ngModel)]="nombre" class="form-control">
+
+        <label class="form-label">Apellido</label>
+        <input type="apellido" name="apellido" [(ngModel)]="apellido" class="form-control">
+
+        
+
 
         <label class="form-label">Email</label>
         <input type="email" name="email" [(ngModel)]="email" class="form-control">
