--- a/src/app/pages/agregar-productos/agregar-productos.component.html
+++ b/src/app/pages/agregar-productos/agregar-productos.component.html
@@ -39,7 +39,7 @@
             <input type="number" class="form-control" placeholder="Precio" name="precio" [(ngModel)]="precio">
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <a class="btn btn-warning" [routerLink]="['/lista-productos']">Regresar</a>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-warning" [routerLink]="['/lista-menu']">Regresar</a>
     </form>
 </div>
