--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,30 +1,26 @@
-<div class="container mt-5">
+<div class="container mt-5" style="padding: 60px; background: url('https://i.blogs.es/65c10b/restaurantechino/1366_2000.jpg') no-repeat center center fixed; background-size: cover;">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card shadow-lg p-4" style="border-radius: 15px; border: 2px solid #ccc;">
-                <h1 class="text-center mb-4" style="color: #333; font-family: 'Arial', sans-serif; font-size: 2.5rem; font-weight: bold;">LOGIN</h1>
+            <div class="card shadow p-4" style="border-radius: 20px; border: 2px solid #555; background-color: rgba(249, 249, 249, 0.8);">
+                <h1 class="text-center mb-4" style="color: #555; font-family: 'Arial', sans-serif; font-size: 2.5rem; font-weight: bold;">Login</h1>
 
                 <form (ngSubmit)="login(formulario)" #formulario="ngForm">
                     <div class="form-group mb-3">
                         <label for="username" class="form-label" style="color: #555; font-weight: bold;">Email:</label>
-                        <div class="input-group">
-                            <span class="input-group-text" id="basic-addon1" style="background-color: #fff; color: #555;">📧</span>
-                            <input type="text" class="form-control" placeholder="Username" name="email" [(ngModel)]="email" style="border-radius: 10px; border: 2px solid #ccc;">
-                        </div>
+                        <input type="text" class="form-control" placeholder="Username" name="email" [(ngModel)]="email" style="border-radius: 10px; border: 2px solid #555;">
                     </div>
 
                     <div class="form-group mb-3">
                         <label for="pwd" class="form-label" style="color: #555; font-weight: bold;">Password:</label>
                         <div class="input-group">
-                            <span class="input-group-text" id="basic-addon1" style="background-color: #fff; color: #555;">🔑</span>
-                            <input [type]="passwordFieldType" class="form-control" placeholder="Password" name="password" [(ngModel)]="password" style="border-radius: 10px; border: 2px solid #ccc;">
-                            <button type="button" class="btn btn-outline-secondary" (click)="togglePasswordVisibility()" style="border-radius: 10px; border: 2px solid #ccc; background-color: #f0f0f0; color: #555;">
-                                {{ passwordFieldType === 'password' ? '🙈' : '👀' }}
+                            <input [type]="passwordFieldType" class="form-control" placeholder="Password" name="password" [(ngModel)]="password" style="border-radius: 10px; border: 2px solid #555;">
+                            <button type="button" class="btn btn-outline-secondary" (click)="togglePasswordVisibility()" style="border-radius: 10px; border: 2px solid #555; background-color: #f0f0f0; color: #555;">
+                                {{ passwordFieldType === 'password' ? 'ver' : 'no ver' }}
                             </button>
                         </div>
                     </div>
                   
-                    <button type="submit" class="btn btn-primary w-100" style="border-radius: 10px;">Submit</button>
+                    <button type="submit" class="btn btn-success w-100" style="border-radius: 10px; background-color: rgb(209, 82, 65); border-color: rgb(250, 16, 16);">Submit</button>
                     
                 </form>
                 <div *ngIf="userRole" style="margin-top: 20px;">
